--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,10 @@
         <title>GLSL Experiments</title>
     </head>
     <body>
+        <div
+            id="renderer-container"
+            style="width:640; height: 480"
+        />
+    </body>
 </html>
 
