--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Webpack App</title>
-  </head>
-  <body>
-  <script type="text/javascript" src="main.85bf36fa.js"></script></body>
+    <head>
+        <meta charset="UTF-8">
+        <title>GLSL Experiments</title>
+    </head>
+    <body>
+        <div
+            id="renderer-container"
+            style="width:640; height: 480"
+        />
+    <script type="text/javascript" src="main.a26a77fe.js"></script></body>
 </html>
+
