--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,12 @@
             id="renderer-container"
             style="width:640; height: 480"
         />
+        <div id="renderer-dropdown-container">
+            <select name="renderer-dropdown" id="renderer-drowndown">
+                <option value="threejs">ThreeJS</option>
+                <option value="glslCanvas">glslCanvas</option>
+            </select>
+        </div>
     </body>
 </html>
 
