feat: glslCanvas based development environment
Squashed commit of the following:

commit bb83901f578f7b2ac90649c9fe1c4187f738f1c6
Author: Sean Haneberg <haneberg@gmail.com>
Date:   Sun Apr 19 19:30:45 2020 -0700

    simpler dev env

commit 9af07f0fac26b16aad7428adb9ebbe10ca2e5958
Author: Sean Haneberg <haneberg@gmail.com>
Date:   Sun Apr 19 18:37:54 2020 -0700

    update packages and add glslCanvas

commit 96d17fc10054ad823ec9340985401256d6c5ceea
Author: Sean Haneberg <haneberg@gmail.com>
Date:   Thu Aug 15 16:26:08 2019 -0700

    add container

commit 56b957858f3f8e850285890186b7d9424b496d0e
Author: Sean Haneberg <haneberg@gmail.com>
Date:   Sun Aug 11 21:05:10 2019 -0700

    better size

commit 7881187f0e766ec6b32853307608dde666c8c973
Author: Sean Haneberg <haneberg@gmail.com>
Date:   Sun Aug 11 21:03:05 2019 -0700

    smaller renderer

commit 7c08c9f157d1b6007c3f42afb7d67093c1bed584
Author: Sean Haneberg <haneberg@gmail.com>
Date:   Sun Aug 11 20:12:11 2019 -0700

    custom html template

commit 7459e369effab7a7f9a0adc04101833dffc15b12
Author: Sean Haneberg <haneberg@gmail.com>
Date:   Sun Aug 11 14:09:27 2019 -0700

    vertex & camera

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,8 @@
         <meta charset="UTF-8">
         <title>GLSL Experiments</title>
     </head>
-    <body>
-        <div
-            id="renderer-container"
-            style="width:640; height: 480"
-        />
+    <body style="background-color: #000000">
+        <canvas id="glsl-canvas"></canvas>
     </body>
 </html>
 
