--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
         <meta charset="UTF-8">
         <title>GLSL Experiments</title>
     </head>
-    <body>
-        <div
-            id="renderer-container"
-            style="width:640; height: 480"
-        />
-    <script type="text/javascript" src="main.a26a77fe.js"></script></body>
+    <body style="background-color: #000000">
+        <canvas id="glsl-canvas"></canvas>
+    <script type="text/javascript" src="main.3678baad.js"></script></body>
 </html>
 
