--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body style="background-color: #000000">
         <canvas id="glsl-canvas"></canvas>
-    <script type="text/javascript" src="main.3678baad.js"></script></body>
+    <script type="text/javascript" src="app.214e2648068a998f7fec.js"></script><script type="text/javascript" src="print.55a1722827da9408d047.js"></script></body>
 </html>
 
